# hackathon

./: .gitignore  AGENCY2026_CHALLENGE6.md  GIC_LOBBYIST_DATA_FINDINGS.md  README.md  TASK_GIC_LOBBYIST_INGEST.md  agency_hack_2026_context  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app/: demo_data.py  main.py
data/: agent_state.db
data/cache/: crossover.parquet  top_rings.json
docs/handoff/: codex-final.md  deploy.md  kimi-final.md  opus-final.md  opus-status.md
scripts/: precompute_crossover.py  precompute_rings.py  prewarm.py  run_agents.py  run_splink_resolution.py  seed_agents.py  weekly_refresh.py
src/agents/: analyst.py  briefer.py  medallion.py  narrator.py  resolver.py  risk_analyst.py  risk_scorer.py  scheduler.py  state.py
src/agents/watchers/: base.py  cra_donees.py  cra_t3010.py  fed_grants.py
src/db/: connection.py  queries.py  smoke.py
src/graph/: builder.py  exporter.py
src/score/: rules.py  scorer.py
tests/: SKIPPED.md  test_agent_medallion.py  test_db_backed_pipeline.py  test_splink_resolution.py
