[project]
name = "agency-hack-2026"
version = "0.1.0"
description = "Agency 2026 hackathon — Related Parties & Governance Networks (Challenge #6)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pandas>=2.0",
    "duckdb>=1.0",
    "splink>=4.0",
    "cleanco>=2.3",
    "psycopg[binary]>=3.2",
    "pyarrow>=15.0",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "networkx>=3.0",
    "anthropic>=0.40",
    "streamlit>=1.30",
    "pyvis>=0.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
